fixed spacing issues for contacts and collections

--- a/front-end/src/Contacts.css
+++ b/front-end/src/Contacts.css
@@ -6,8 +6,8 @@
 
 .contacts-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 55px;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    gap: 50px;
     justify-items: center;
     padding: 20px 0;
 }
